--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author: "Xhorxhina Taraj"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: xtaraj
+github_username:  xhorxhinaT
 
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes"
